# transcription

./: .gitignore  README.md  main.py  pyproject.toml  transcription_input_file.sh  transcription_input_url.sh
prompts/: mr.txt  transcribeurl.txt
src/: pdf_processor.py  transcriber.py  utils.py
tests/: test_pdf_processor.py  test_utils.py
